--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -76,3 +76,9 @@ body {
 .service-card {
   @apply py-6 px-6 bg-gray-900 rounded-lg border border-gray-700 w-full md:w-1/6 text-center min-h-20 md:min-h-40 flex items-center justify-center flex-1 flex-col;
 }
+
+input,
+select,
+textarea {
+  @apply px-3 py-2 rounded-xl text-black;
+}
