--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -80,5 +80,9 @@ body {
 input,
 select,
 textarea {
-  @apply px-3 py-2 rounded-xl text-black;
+  @apply px-3 py-2 rounded-lg text-black;
+}
+
+.primary-button {
+  @apply border border-opacity-20 bg-blue-600 hover:bg-blue-500 active:opacity-60 border-white py-3 px-8 rounded-full inline-block font-semibold;
 }
