--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -80,9 +80,24 @@ body {
 input,
 select,
 textarea {
-  @apply px-3 py-2 rounded-lg text-black;
+  @apply px-3 py-2 rounded-xl text-gray-200 bg-white bg-opacity-20 transition-all duration-150 outline-none;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  @apply bg-white text-black;
+}
+
+input:disabled,
+select:disabled,
+textarea:disabled {
+  @apply bg-gray-300;
 }
 
 .primary-button {
   @apply border border-opacity-20 bg-blue-600 hover:bg-blue-500 active:opacity-60 border-white py-3 px-8 rounded-full inline-block font-semibold;
+}
+.primary-button:disabled {
+  @apply bg-gray-300 text-gray-500;
 }
