bg change, added review ss

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -33,6 +33,14 @@ body {
   }
 }
 
+.hero-bg {
+  background-image: url("/hero-bg.svg");
+  /* background-size: 70%; */
+  background-position: center;
+  background-repeat: no-repeat;
+  @apply bg-cover md:bg-[70%];
+}
+
 @layer base {
   .bg-blur-light {
     @apply relative z-[-1]
